fix overflow

--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,13 @@ header{
 .right-pic{
     align-items: right;
     flex: 1;
+    align-items: right;
     /* transform: translateX(35px); */
 }
 
 .right-pic img{
-    
     width: 80%;
-    transform: translateX(50px);
+    transform: translateX(100px);
 
 }
 
@@ -147,7 +147,12 @@ background-color: var(--purple);
     border-radius: 50%;
     margin: 0 auto;
 }
+.circle p{
+    font-weight: 700;
+    font-size: 16px;
+    color: #87879D;
 
+}
 .people{
     width: 80%;
     margin: 2rem auto;
